--- a/src/app/pages/listadocompras/listadocompras.page.html
+++ b/src/app/pages/listadocompras/listadocompras.page.html
@@ -10,91 +10,98 @@
 
   <br>
 
-  <div *ngIf="idRol=='3'" class="contenedor-cards">
-    <hr>
-      <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-        <p class="letras-negrita tamano-letras">Usuario:</p>
-        <p class="letras-negrita2 tamano-letras color-negro">&nbsp;MarkusAce</p>
-      </div>
-      <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-        <p class="letras-negrita tamano-letras">Fecha de compra:</p>
-        <p class="letras-negrita2 tamano-letras color-negro">&nbsp;28/08/2024</p>
-      </div>
-      <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-        <p class="letras-negrita tamano-letras">Estado:</p>
-        <p class="letras-negrita2 tamano-letras color-negro">&nbsp;Pendiente</p>
-      </div>
-      <div class="margin-auto centrar"><img src="assets/zapatilla.png" alt="" class="tamano-zapatilla"></div>
-        <div class="contenedor-letras-card margin-auto">
-          <p class="letras-negrita2">RDB Game Hombre Celeste</p>
-          <p class="letras-negrita2">Puma</p>
+  <div *ngIf="idRol=='3'">
+    <div *ngFor="let compra of arregloCompra" class="contenedor-cards espacio">
+      <br>
+        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+          <p class="letras-negrita tamano-letras">Usuario:</p>
+          <p class="letras-negrita2 tamano-letras color-negro">{{compra.nombreUsuario}}</p>
         </div>
         <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Talla:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;9 (27 cms)</p>
+          <p class="letras-negrita tamano-letras">Fecha de compra:</p>
+          <p class="letras-negrita2 tamano-letras color-negro">{{compra.cfechaventa}}</p>
         </div>
-        
         <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Cantidad:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp; 1 Unidad</p>
+          <p class="letras-negrita tamano-letras">Estado:</p>
+          <p class="letras-negrita2 tamano-letras color-negro">{{compra.cestatus}}</p>
         </div>
-
-        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Dirección:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;Calle real 343</p>
-        </div>
-
-        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Llega en:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;1-3 días habiles</p>
-        </div>
-
-        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Total:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;$33.590</p>
-        </div>
-        
-  </div>
+          <div *ngFor="let detalle of compra.detalles">
+            <div class="margin-auto centrar contenedor-imagen"><img [src]="detalle.fotoZapatilla" alt="" class="tamano-zapatilla"></div>
+            <div  class="contenedor-letras-card margin-auto">
+              <p class="letras-negrita">{{ detalle.nombreZapatilla }}</p>
+              <p class="letras-negrita">{{ detalle.nombreMarca }}</p>
+            </div>
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Talla:</p>
+              <p class="tamano-letras letras-negrita2">{{ detalle.dtalla }}</p>
+            </div>
+            
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Cantidad:</p>
+              <p class="tamano-letras letras-negrita2">{{detalle.dcantidad}}</p>
+            </div>
     
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Dirección:</p>
+              <p class="tamano-letras letras-negrita2">{{compra.direccionUsuario}}</p>
+            </div>
+    
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Total:</p>
+              <p class="tamano-letras letras-negrita2">{{compra.ctotal | preciochile}}</p>
+              <br>
+              <br>
+            </div>
+          </div>
+    </div>
+  </div>
+
   <hr>
 
-  <div *ngIf="idRol=='2'" class="contenedor-cards">
-    <hr>
-      <div class="contenedor-flex contenedor-info margin-auto centrar-justify">
-        <p class="letras-negrita tamano-letras">Fecha de compra:</p>
-        <p class="letras-negrita2 tamano-letras color-negro">&nbsp;28/08/2024</p>
-      </div>
-      <div class="margin-auto centrar"><img src="assets/zapatilla.png" alt="" class="tamano-zapatilla"></div>
-        <div class="contenedor-letras-card margin-auto">
-          <p class="letras-negrita2">RDB Game Hombre Celeste</p>
-          <p class="letras-negrita2">Puma</p>
+  <div *ngIf="idRol=='2'">
+    <div *ngFor="let compra of arregloUsuarioCompra" class="contenedor-cards espacio">
+      <br>
+        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+          <p class="letras-negrita tamano-letras">Fecha de compra:</p>
+          <p class="letras-negrita2 tamano-letras color-negro">{{compra.cfechaventa}}</p>
         </div>
         <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Talla:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;9 (27 cms)</p>
+          <p class="letras-negrita tamano-letras">Estado:</p>
+          <p class="letras-negrita2 tamano-letras color-negro">{{compra.cestatus}}</p>
         </div>
-        
-        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Cantidad:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp; 1 Unidad</p>
-        </div>
-
-        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Dirección:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;Calle real 343</p>
-        </div>
-
-        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Llega en:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;1-3 días habiles</p>
-        </div>
-
-        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
-          <p class="letras-negrita tamano-letras">Total:</p>
-          <p class="tamano-letras letras-negrita2">&nbsp;$33.590</p>
-        </div>  
+          <div *ngFor="let detalle of compra.detalles">
+            <div class="margin-auto centrar contenedor-imagen"><img [src]="detalle.fotoZapatilla" alt="" class="tamano-zapatilla"></div>
+            <br>
+            <div  class="contenedor-letras-card margin-auto">
+              <p class="letras-negrita2">{{ detalle.nombreZapatilla }}</p>
+              <p class="letras-negrita2">{{ detalle.nombreMarca }}</p>
+            </div>
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Talla:</p>
+              <p class="tamano-letras letras-negrita2">{{ detalle.dtalla }}</p>
+            </div>
+            
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Cantidad:</p>
+              <p class="tamano-letras letras-negrita2">{{detalle.dcantidad}}</p>
+            </div>
+    
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Dirección:</p>
+              <p class="tamano-letras letras-negrita2">{{compra.direccionUsuario}}</p>
+            </div>
+    
+            <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+              <p class="letras-negrita tamano-letras">Total:</p>
+              <p class="tamano-letras letras-negrita2">{{compra.ctotal | preciochile}}</p>
+            </div>
+              <br>
+              <br>
+            
+          </div>
+    </div>
   </div>
-  <br>
+  <hr>
 
 </ion-content>
 
