--- a/src/app/pages/listadocompras/listadocompras.page.html
+++ b/src/app/pages/listadocompras/listadocompras.page.html
@@ -26,7 +26,7 @@
           <p class="letras-negrita2 tamano-letras color-negro">{{compra.cestatus}}</p>
         </div>
           <div *ngFor="let detalle of compra.detalles">
-            <div class="margin-auto centrar contenedor-imagen"><img [src]="detalle.fotoZapatilla" alt="" class="tamano-zapatilla"></div>
+            <div class="margin-auto centrar contenedor-imagen espacio2"><img [src]="detalle.fotoZapatilla" alt="" class="tamano-zapatilla"></div>
             <div  class="contenedor-letras-card margin-auto">
               <p class="letras-negrita">{{ detalle.nombreZapatilla }}</p>
               <p class="letras-negrita">{{ detalle.nombreMarca }}</p>
@@ -70,7 +70,7 @@
           <p class="letras-negrita2 tamano-letras color-negro">{{compra.cestatus}}</p>
         </div>
           <div *ngFor="let detalle of compra.detalles">
-            <div class="margin-auto centrar contenedor-imagen"><img [src]="detalle.fotoZapatilla" alt="" class="tamano-zapatilla"></div>
+            <div class="margin-auto centrar contenedor-imagen espacio2"><img [src]="detalle.fotoZapatilla" alt="" class="tamano-zapatilla"></div>
             <br>
             <div  class="contenedor-letras-card margin-auto">
               <p class="letras-negrita2">{{ detalle.nombreZapatilla }}</p>
