--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -61,7 +61,7 @@
         </ion-button>
       </div>
       <div class="centrar espacio-abajo">
-        <ion-button>
+        <ion-button (click)="cambiarContrasena()">
           <ion-icon slot="start" name="pencil"></ion-icon>
           Cambiar contraseña
         </ion-button>
