--- a/src/app/pages/zapatillas/zapatillas.page.scss
+++ b/src/app/pages/zapatillas/zapatillas.page.scss
@@ -13,6 +13,14 @@ ion-title{
     opacity: 0.7;
 }
 
+.contenedor-resultado{
+    display: grid;
+    place-items:center;
+    background-color: #F44449;
+    opacity: 0.7;
+    min-height: 10%;
+}
+
 .boton-agregar{
     --background: black;
     width: 50%;
@@ -204,4 +212,8 @@ ion-title{
 .margin-topbot-auto{
     margin-top: auto;
     margin-bottom: auto;
+}
+
+.redondear{
+    border-radius: 5px;
 }
