--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,6 +1,6 @@
 <ion-header >
 
-  <app-barranav titulo="Bienvenido {{ idRol }}" [tipousuario]="idRol"></app-barranav>
+  <app-barranav titulo="Bienvenido {{ uusuario }}" [tipousuario]="idRol"></app-barranav>
 
 </ion-header>
 
