Arreglo de todas las pruebas unitarias basicas

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -33,7 +33,7 @@
           <p>¿No tienes una cuenta? &nbsp;</p>
           <p class="letras-negrita"> Registrate  aqui!!!</p>
         </div>
-        <p class="tamano-letras letras-negrita" (click)="irCambiarContra()">Cambia tu contraseña aqui.</p>
+        <p class="tamano-letras letras-negrita" (click)="irCambiarContra()">Recupera tu contraseña aqui.</p>
       </div>
     </div>
   </div>
